[metadata]
name = grunt
author = Paul Belanger
author-email = paul.belanger@polybeacon.com
summary = Smoke testing
description-file = README.rst
license = Apache-2
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[files]
packages =
    grunt

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]
warnerrors = True
